# screenpipe

./: .cursorignore  .cursorrules  CONTRIBUTING.md  Cargo.toml  README-ja.md  README-zh_CN.md  README.md  TESTING.md  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/scripts/: check_logs.sh  generate_changelog_md.sh  purge_crabnebula.sh  run_screenpipe.sh  stop_screenpipe.sh  test_audio_capture.sh  test_ocr.sh
.github/workflows/: benchmark.yml  ci.yml  linux-integration-test.yml  release-app.yml  release-cli.yml  windows-integration-test.yml
content/changelogs/: 0.10.0.md  0.10.1.md  0.10.2.md  0.11.0.md  0.11.9.md  0.12.3.md  0.14.13.md  0.14.17.md  0.14.18.md  0.14.2.md  0.14.20.md  0.14.22.md  0.14.24.md  0.14.33.md  0.15.0.md  0.15.3.md  0.15.5.md  0.16.0.md  0.16.1.md  0.16.3.md  0.17.0.md  0.17.1.md  0.17.2.md  0.17.8.md  0.18.0.md  0.18.1.md  0.18.3.md  0.18.4.md  0.18.9.md  0.19.0.md  0.19.3.md  0.19.5.md  0.20.2.md  0.20.6.md  0.20.7.md  0.20.8.md  0.21.2.md  0.21.8.md  0.21.9.md  0.22.0.md  (+56 more)
content/docs/: docs.json  theme.config.tsx
pipes/: README.md
pipes/data-table/: next.config.ts  package.json
pipes/example-pipe/: README.md  (+2 more)
screenpipe-app-tauri/: .gitignore  package-lock.json  package.json
screenpipe-audio/: Cargo.toml  build.rs
screenpipe-core/: Cargo.toml
screenpipe-events/: Cargo.toml
screenpipe-integrations/: Cargo.toml
screenpipe-integrations/screenpipe-mcp/: README.md  pyproject.toml
screenpipe-server/: Cargo.toml  README.md  build.rs
screenpipe-vision/: Cargo.toml
(+299 files in other folders)
