[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skyprompt-mcp"
version = "0.1.0"
description = "MCP server for skyprompt search"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx",
    "nest-asyncio"
]

[project.scripts]
skyprompt-mcp = "skyprompt_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skyprompt_mcp"]

[tool.hatch.build]
only-packages = true
